--- a/main.style.css
+++ b/main.style.css
@@ -94,20 +94,16 @@ a {
   width: 998px;
   margin: 120px auto 50px;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   justify-content: center;
 }
 .section__content {
-  display: flex;
-}
-.section__content--reverse {
   display: flex;
 }
 
 .description-section {
   padding: 30px;
   width: 450px;
-  grid-area: des;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -124,15 +120,13 @@ h2 {
   color: transparent;
   background-clip: text;
 }
-.save__img {
-  grid-area: img;
+.section-img {
   width: 550px;
   height: 450px;
   border-radius: 15px;
   background-color: #f0f6ff;
 }
 .description {
-  grid-area: text;
   font-family: Abel;
   font-size: 16px;
   font-weight: 400;
@@ -143,13 +137,6 @@ h2 {
   color: rgba(107, 107, 107, 1);
 }
 
-.manage__image {
-  width: 550px;
-  height: 450px;
-  padding: 114px, 68px, 66px, 68px;
-  border-radius: 15px;
-  grid-area: img;
-}
 .manage--gradient {
   background: linear-gradient(277.01deg, #6fbaff 59.22%, #ffd88b 93.66%);
   color: transparent;
@@ -164,22 +151,6 @@ h2 {
   );
   color: transparent;
   background-clip: text;
-}
-
-.share__img {
-  width: 570px;
-  height: 450px;
-  top: -9px;
-  left: -10px;
-  border-radius: 25px;
-  grid-area: img;
-}
-
-.search__img {
-  width: 550px;
-  height: 450px;
-  border-radius: 15px;
-  grid-area: img;
 }
 
 .search--gradient {
@@ -266,15 +237,52 @@ h2 {
     border-radius: 25px;
   }
   .section {
-    margin-top: 80px;
+    margin: 0;
+    height: 451px;
+    width: 100%;
+    display: flex;
   }
-  .section__content,
-  .section__content--reverse {
-    grid-template: 2fr/1fr;
-    grid-template-areas:
-      "des"
-      "img";
+  .section__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    width: 325px;
+    height: 374.91px;
+  }
+  .description-section {
+    width: 325px;
+    padding: 0;
+    gap: 10px;
 
-    /* place-items: center; */
+    display: flex;
+    align-items: flex-start;
+    /* justify-content: space-between; */
+  }
+  .none {
+    display: none;
+  }
+  .description-section > h2 {
+    font-family: Pretendard;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 29px;
+    letter-spacing: 0px;
+    text-align: left;
+  }
+  .description {
+    font-family: Pretendard;
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 23px;
+    letter-spacing: 0px;
+    text-align: left;
+  }
+  .section-img {
+    width: 325px;
+  }
+  .section__content.reverse {
+    flex-direction: column-reverse;
+    margin-top: 40px;
   }
 }
