--- a/styles/index.css
+++ b/styles/index.css
@@ -1,16 +1,39 @@
 @import "./global.css";
 
-@font-face {
-  font-family: Acme-Regular;
-  src: url("fonts/Acme-Regular.ttf");
+/**/
+.flexbox {
+  background-color: aquamarine;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 15.7rem;
+  padding: 5rem 0;
+  width: 99.8rem;
+  height: 45rem;
+  flex-flow: column wrap;
+  gap: 1rem 15.7rem;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Acme&display=swap");
-
-.acme-regular {
-  font-family: "Acme", sans-serif;
+.flexbox > h2 {
+  margin: 0;
+  font-size: 4.8rem;
+  font-weight: 700;
+  line-height: normal;
+}
+.flexbox > p {
+  margin: 0;
+  font-size: 1.6rem;
   font-weight: 400;
-  font-style: normal;
+  line-height: 150%;
+  color: #6b6b6b;
+}
+/**/
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* nav 영역 */
@@ -29,7 +52,8 @@ nav {
   align-items: center;
   width: 100%;
   height: 9.3rem;
-  padding: 2rem 20rem;
+  max-width: 192rem;
+  padding: 0 20rem;
 }
 
 /* header 영역 */
@@ -77,7 +101,7 @@ header {
   flex-direction: column;
   align-items: center;
   gap: 4rem;
-  margin-top: 7rem;
+  padding-top: 7rem;
 }
 
 .header-title {
@@ -109,7 +133,7 @@ section {
   display: flex;
   justify-content: center;
   gap: 15.7rem;
-  padding: 50px 0;
+  padding: 5rem 0;
 }
 
 .contents-img {
@@ -168,6 +192,10 @@ section {
   background-image: linear-gradient(271deg, #fe578f -9.84%, #68e8f9 107.18%);
 }
 
+footer {
+  width: 100%;
+}
+
 /* footer 영역 */
 .footer-wrap {
   display: flex;
@@ -182,7 +210,6 @@ section {
 .copyright {
   color: #676767;
   text-align: center;
-  font-family: Acme;
   font-size: 1.6rem;
   font-weight: 400;
   line-height: normal;
@@ -207,5 +234,129 @@ section {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  font-family: "Acme", sans-serif;
+}
+
+@media (max-width: 1199px) {
+  .gnb {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 9.4rem;
+    max-width: 192rem;
+    padding: 0 3.2rem;
+  }
+
+  .header-title {
+    max-width: 47.2rem;
+    width: max-content;
+    font-size: 6.4rem;
+    line-height: 8rem;
+    word-break: keep-all;
+  }
+
+  .header-img {
+    width: 69.8rem;
+    height: 34.3rem;
+  }
+
+  .contents-img {
+    width: 38.5rem;
+    height: 31.5rem;
+  }
+
+  section {
+    gap: 5.1rem;
+  }
+
+  .flexbox {
+    width: 100%;
+    gap: 1rem 5.1rem;
+    width: 69.8rem;
+    height: 31.5rem;
+  }
+}
+/* mobile */
+@media (max-width: 767px) {
+  section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2.4rem;
+    background-color: #68e8f9;
+  }
+
+  header {
+    width: 100%;
+  }
+
+  .gnb {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 6.3rem;
+    padding: 0 3.2rem;
+  }
+
+  .header-contents {
+    gap: 2.4rem;
+  }
+
+  .header-title {
+    max-width: 23.6rem;
+    width: max-content;
+    font-size: 3.2rem;
+    line-height: 4.2rem;
+    word-break: keep-all;
+  }
+
+  .header-img {
+    width: 30.3rem;
+    height: 17.9rem;
+  }
+
+  .flexbox {
+    width: 100%;
+    height: 45.1rem;
+    max-width: 76.7rem;
+    padding: 0 3.2rem;
+    background-color: #fe578f;
+    flex-direction: column;
+    flex-flow: wrap;
+    gap: 0;
+  }
+
+  .flexbox > h2 {
+    max-width: 32.5rem;
+    font-size: 2.4rem;
+    letter-spacing: -0.03rem;
+    width: 32.5rem;
+    order: 1;
+  }
+
+  .flexbox > p {
+    max-width: 32.5rem;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%;
+    width: 100%;
+    order: 3;
+  }
+
+  .flexbox > img {
+    width: max-content;
+    order: 2;
+    background-color: #68e8f9;
+  }
+
+  /* section:nth-child(odd) {
+    background-color: #fe8a8a;
+  }
+
+  section:nth-child(even) {
+    background-color: #fe578f;
+    flex-direction: column-reverse;
+  } */
 }
