--- a/Styles/main.css
+++ b/Styles/main.css
@@ -261,11 +261,15 @@ footer {
     margin: 20px 0 16px;
   }
   .info {
+    display: grid;
+    grid-template: 1fr / 1fr 1fr;
     padding: 32px 32px 64px;
-  }
-  .license-wrapper {
-    display: flex;
-    flex-direction: column;
     gap: 60px;
+  }
+  .info .license {
+    grid-area: 2/ 1;
+  }
+  .sns {
+    justify-content: flex-end;
   }
 }
