--- a/css/common/root.css
+++ b/css/common/root.css
@@ -1,4 +1,3 @@
-
 /* 
 2024.02.23 v1
 전역 공통 변수
@@ -20,9 +19,19 @@
   --title-size-m: 3rem;
 
   /* 폰트 사이트- 13,14,16,18,20 */
-  --font-size-l: 1.25rem; 
+  --font-size-l: 1.25rem;
   --font-size-lm: 1.125rem;
   --font-size-m: 1rem;
   --font-size-sm: 0.875rem;
   --font-size-s: 0.815rem;
+
+  /* 
+  window size(px)
+  pc:1200이상(1200), table: 768~1199(1199)
+  mobile: 375~767(767), mobile2: 375이하
+  */
+  --window-size-pc: 75rem;
+  --window-size-tablet: 74.9375rem;
+  --window-size-mo: 47.9375rem;
+  --window-size-mo2: 23.4375rem;
 }
