feat: 모바일 반응형 구현

--- a/sign.css
+++ b/sign.css
@@ -15,170 +15,153 @@ html {
 }
 
 body {
+  padding-top: 238px;
   background-color: #F0F6FF;
-  margin-bottom: 100px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 32px;
-}
-
-.topbox {
-  position: relative;
-  left: 520px;
-  top: 238px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 400px;
-  height: 491px;
-  gap: 32px;
+  gap: 30px;
 }
 
-.signintop {
+header {
   display: flex;
   flex-direction: column;
+  gap: 16px;
   width: 218px;
   height: 78px;
-  gap: 16px;
 }
 
-.logo {
+.logo-link {
+  display: flex;
+  justify-content: center;
+}
+
+.header-logo {
   width: 210.58px;
   height: 38px;
 }
 
-.gotosignup {
+.header-message {
+  display: flex;
+  align-items: center;
   width: 218px;
   height: 24px;
-  gap: 8px;
+  column-gap: 8px;
   font-size: 16px;
-}
-
-.signupask {
-  width: 123px;
-  height: 24px;
   font-weight: 400;
   line-height: 24px;
   color: #000000;
 }
 
-.signup {
+.header-link {
+  font-size: 16px;
   font-weight: 600;
   line-height: 19.09px;
   color: #6D6AFE;
 }
 
-.inputform {
-  position: relative;
-  top: -230px;
-  left: 520px;
+.signin-box {
   display: flex;
-  width: 400px;
-  height: 338px;
-  gap: 32px;
-  justify-content: center;
   flex-direction: column;
+  align-items: center;
+  width: 400px;
+  gap: 32px;
 }
 
+.signin-form {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  width: 100%;
+}
 
-.getemail, 
-.getpassword {
-  width: 400px;
-  height: 89px;
+.signin-inputs {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.signin-input-box {
+  display: flex;
+  flex-direction: column;
   gap: 12px;
 }
 
-.getemail input:focus,
-.getpassword input:focus {
-  outline: 1px solid blue;
-} 
-
-
-#inputemail,
-#inputpassword {
+.signin-input-label {
   font-size: 14px;
   font-weight: 400;
+  line-height: 17px;
+  letter-spacing: 0em;
+  text-align: left;
   color: #000000;
 }
 
-#signinemail,
-#signinpassword {
+.signin-input {
   width: 400px;
   height: 60px;
-  padding: 18px 15px 18px 15px;
+  padding: 18px, 15px;
   border-radius: 8px;
-  border: 1px solid #CCD5E3;
+  border: 1px solid #6D6AFE;
 }
 
-.passwordbox {
+.signin-input:focus {
+  outline: 1px solid blue;
+}
+
+.sign-password {
   position: relative;
 }
 
-.eyevector {
+.eye-button {
   position: absolute;
-  top: 25px;
-  right: 25px;
-  width: 16px;
-  height: 13.82px;
-  background-color: #373740;
-}
-
-.getemail:focus {
-  border-color: blue;
-}
-
-.entering {
-  position: relative;
-  top: -280px;
-  left: 520px;
-}
-
-.entersignin {
-  width: 400px;
-  height: 53px;
-  padding: 16px 20px 16px 20px;
-  border-radius: 8px;
-  gap: 10px;
-  font-weight: 600;
-  font-size: 18px;
-  color: #F5F5F5;
-  background-image: linear-gradient(90.99deg, #6D6AFE 0.12%, #6AE3FE 101.84%);
+  top: 45px;
+  right: 30px;
+  width: 30px;
+  height: 30px;
+  background-color: #FFFFFF;
   border: none;
 }
 
-.anothersignin {
-  position: relative;
-  top: -248px;
-  left: 520px;
+.cta {
+  height: 53px;
+  border-radius: 8px;
+  border: none;
+  padding: 16px 20px;
+  gap: 10px;
+  background-image: linear-gradient(90.99deg, #6D6AFE 0.12%, #6AE3FE 101.84%);
+  color: #F5F5F5;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 21.48px;
+}
+
+.sns-box {
   display: flex;
   width: 400px;
   height: 66px;
-  border-radius: 8px;
-  border: 1px;
   padding: 12px 24px;
+  border-radius: 8px;
   justify-content: space-between;
   align-items: center;
   background-color: #E7EFFB;
+  border: 1px solid #CCD5E3
 }
 
-.sociallogin {
+.sns-text {
   font-weight: 400;
   font-size: 14px;
+  line-height: 16.71px;
   color: #373740;
 }
 
-.anothersigninicon {
+.sns-links {
   width: 100px;
   height: 42px;
   gap: 16px;
 }
 
-.googleicon,
-.kakaoicon {
+.sns-link {
   width: 42px;
   height: 42px;
+  border-radius: 50%;
 }
-
-
-
