--- a/css/page/join.css
+++ b/css/page/join.css
@@ -8,6 +8,7 @@ join css
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 100vh;
   background-color: var(--color-gray5);
 }
 
