--- a/sign.css
+++ b/sign.css
@@ -20,7 +20,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 30px;
+  row-gap: 30px;
 }
 
 header {
@@ -164,4 +164,13 @@ header {
   width: 42px;
   height: 42px;
   border-radius: 50%;
+}
+
+/*Mobile*/
+@media (max-width: 768px) {
+  body {
+    padding-left: 32px;
+    padding-right: 32px;
+    max-width: 400px;
+  }
 }
