Replace img-main.png with right one
wrong image file has been placed as img-main.png, thus replaced with
right one.

plus, changed image type from png to svg to solve clearity issue when
image size get small.

"head" class's width is adjusted to the same one with "content" class's
width for consistency. 100% to 1050px.

--- a/style-landing.css
+++ b/style-landing.css
@@ -27,13 +27,13 @@ footer {
 .head,
 .contents,
 .info {
-  /* border: 5px solid red; */
-  width: 100%;
-  max-width: 1920px;
+  border: 5px solid red;
   margin: 0 auto;
 } 
 
 .nav {
+  width: 100%;
+  max-width: 1920px;
   position: fixed;
   top: 0;
   left: 0;
@@ -76,6 +76,7 @@ footer {
 }
 
 .head {
+  max-width: 1050px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
