--- a/css/nav.css
+++ b/css/nav.css
@@ -7,6 +7,9 @@
 	position: sticky;
 	top:0;
 	z-index: 1;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .nav__contents{
@@ -45,6 +48,16 @@
 	font-weight: 600;
 	color: #f5f5f5;
 	font-family: 'Pretendard';
+}
+
+@media(max-width: 1199px){
+	.nav {
+		padding: 20px 32px 20px 32px;
+	}
+	.nav__contents{
+		width: 100%;
+		max-width: 799px;
+	}
 }
 
 @media(max-width: 767px){
