--- a/css/landing-style.css
+++ b/css/landing-style.css
@@ -20,7 +20,7 @@ header{
 }
 
 .linkbrary-nav{
-  padding: 20px 200px;
+  padding: 1.25rem 12.5rem;
 }
 
 .linkbrary-nav ul{
@@ -34,24 +34,24 @@ header{
   list-style: none;
 }
 
-.logo{
-  width: 133px;
-  height: 24px;
+.linkbrary-nav__logo{
+  width: 12.0625rem;
+  height: 1.5rem;
 }
 
-.signin-btn{
+.main-header__signin-btn{
   display: flex;
-  width: 128px;
-  padding: 16px 20px;
+  width: 8rem;
+  padding: 1rem 1.25rem;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: .625rem;
   border-radius: 8px;
   background: var(--gra-purpleblue-to-skyblue, linear-gradient(91deg, #6D6AFE 0.12%, #6AE3FE 101.84%));
   border-style: none;
   color: var(--Grey-Light, #F5F5F5);
   font-family: Pretendard;
-  font-size: 18px;
+  font-size: 1.125rem;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
@@ -59,7 +59,7 @@ header{
 }
 
 main{
-  padding-top: 93px;
+  padding-top: 5.8125rem;
 }
 
 .main-header{
@@ -71,86 +71,78 @@ main{
 .main-header__card{
   display: flex;
   width: 100%;
-  padding: 70px 360px 0px 360px;
+  padding: 4.375rem 22.5rem 0rem 22.5rem;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  gap: 40px;
+  gap: 2.5rem;
   z-index: 0;
 }
 
 .main-header__title{
   text-align: center;
   font-family: Pretendard;
-  font-size: 64px;
+  font-size: 4rem;
   font-style: normal;
   font-weight: 700;
-  line-height: 80px; /* 125% */
-  width: 708px;
-  height: 160px;
+  line-height: 5rem; /* 125% */
+  width: 44.25rem;
+  height: 10rem;
 }
 
-.title-gradation{
+.main-header__line-break{
+  display: inline-block;
+}
+
+.main-header__title-gradation{
   background: linear-gradient(91deg, #6D6AFE 17.28%, #FF9F9F 74.98%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-.signup-btn{
+.main-header__signup-btn{
   display: flex;
-  width: 350px;
-  padding: 16px 20px;
+  width: 21.875rem;
+  padding: 1rem 1.25rem;
   justify-content: center;
   align-items: center;
   gap: 10px;border-radius: 8px;
   background: var(--gra-purpleblue-to-skyblue, linear-gradient(91deg, #6D6AFE 0.12%, #6AE3FE 101.84%));
   color: var(--Grey-Light, #F5F5F5);
   font-family: Pretendard;
-  font-size: 18px;
+  font-size: 1.125rem;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
   text-decoration: none;
 }
 
-.linkbrary-section__preview{
-  width: 1200px;
-  height: 590px;
-}
-
-.preview-img{
+.main-header__preview-img{
   position: relative;
-  inset: 50px 41px -119px 41px;
-  width: 1118px;
-  height: 706.956px;
+  width: 69.875rem;
   flex-shrink: 0;
-  border-radius: 25px;
-  box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.08);
-  z-index: 0;
 }
 
 section{
-  padding-top: 70px;
   position: relative;
-  background-color: #fff;
 }
 
 .section__wrap{
   display: flex;
-  padding: 50px 461px 50px 461px;
+  padding: 3.125rem 28.8125rem 3.125rem 28.8125rem;
   justify-content: center;
   align-items: center;
+}
+
+.section__wrap:nth-child(even) .section__card{
+  flex-direction: row-reverse;
 }
 
 .section__card{
   display: flex;
   align-items: center;
-  gap: 157px;
-}
-
-.section__card.reverse{
-  flex-direction: row-reverse;
+  gap: 9.8125rem;
 }
 
 .section__frame{
@@ -158,28 +150,27 @@ section{
   width: 291px;
   flex-direction: column;
   align-items: flex-start;
-  gap: 10px;
+  gap: .625rem;
 }
 
-.section__frame h1{
+.section__title{
   font-family: Pretendard;
-  font-size: 48px;
+  font-size: 3rem;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  letter-spacing: -0.3px;
 }
 
-.section__frame p{
+.section__description{
   color: #6B6B6B;
   font-family: Abel;
-  font-size: 16px;
+  font-size: 1rem;
   font-style: normal;
   font-weight: 400;
   line-height: 150%; /* 24px */
 }
 
-.card-gradation-orange-to-blue{
+.section__gradation-orange-to-blue{
   background: linear-gradient(96deg, #FE8A8A 1.72%, #A4CEFF 74.97%);
   background-clip: text;
   -webkit-background-clip: text;
@@ -187,63 +178,44 @@ section{
 }
 
 .section__img{
-  width: 570px;
-  height: 469px;
+  width: 550px;
+  height: 450px;
   flex-shrink: 0;
   border-radius: 25px;
 }
 
-.download-btn{
-  position: absolute;
-  right: -15px;
-  bottom: -15px;
-  width: 46px;
-  height: 46px;
-  flex-shrink: 0;
-}
-
-.section__album{
-  display: flex;
-  width: 550px;
-  padding: 114px 68px 66px 68px;
-  justify-content: center;
-  align-items: center;
-  border-radius: 15px;
-  background-color: #F0F6FF;
-}
-
-.card-gradation-yellow-to-blue{
+.section__gradation-yellow-to-blue{
   background: linear-gradient(277deg, #6FBAFF 59.22%, #FFD88B 93.66%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-family: Pretendard;
-  font-size: 48px;
+  font-size: 3rem;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  letter-spacing: -0.3px;
+  letter-spacing: -0.2992px;
 }
 
-.card-gradation-blue{
+.section__gradation-blue{
   background: linear-gradient(99deg, #6D7CCD 19.76%, rgba(82, 136, 133, 0.22) 52.69%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-family: Pretendard;
-  font-size: 48px;
+  font-size: 3rem;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
 }
 
-.card-gradation-sky{
+.section__gradation-sky{
   background: var(--Fandom-K-gra-blue-to-pink, linear-gradient(271deg, #FE578F -9.84%, #68E8F9 107.18%));
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-family: Pretendard;
-  font-size: 48px;
+  font-size: 3rem;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -273,40 +245,163 @@ footer{
   align-self: stretch;
 }
 
-.history{
+
+.footer__history{
   color: #676767;
   text-align: center;
   font-family: Acme;
-  font-size: 16px;
+  font-size: 1rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
 }
 
-.support-link{
+.footer__support-link{
   display: flex;
-  width: 181.111px;
-  align-items: flex-start;
   gap: 30px;
 }
 
-.support-link a{
+.footer__support-link a{
   color: #CFCFCF;
   font-family: Acme;
-  font-size: 16px;
+  font-size: 1rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
   text-decoration: none;
 }
 
-.sns-link{
+.footer__sns-link{
   display: flex;
   align-items: flex-start;
   gap: 12px;
 }
 
-.sns-link a{
+.footer__sns-link a{
   width: 20px;
   height: 20px;
+}
+
+/* 태블릿 사이즈 */
+@media (max-width : 1199px) {
+  .linkbrary-nav{
+    margin: auto;
+    max-width: 800px;
+    padding: 20px 32px;
+  }
+
+  .main-header__card{
+    display: flex;
+    padding: 40px 250px 0px 251px;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+  }
+
+  .main-header__title{
+    width: 472px;
+    height: 240px;
+  }
+
+  .main-header__line-break{
+    display: block;
+  }
+
+  .main-header__preview-img{
+    width: 650.3024px;
+    flex-shrink: 0;
+  }
+
+  .section{
+    padding-top: 20px;
+  }
+
+  .section__wrap{
+    display: flex;
+    padding: 50px 250px 50px 251px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .section__card{
+    gap: 51px;
+  }
+
+  .section__img{
+    width: 385px;
+    height: 315px;
+    flex-shrink: 0;
+    border-radius: 25px;
+  }
+}
+
+/* 모바일 사이즈 */
+
+@media (max-width : 767px) {
+  .main-header__card{
+    padding: 28px 32px 0px 33px;
+  }
+
+  .main-header__title,
+  .main-header__signup-btn,
+  .main-header__preview-img{
+    width: 100%;
+    height: 100%;
+  }
+
+  .section{
+    padding-top: 0;
+  }
+
+  .section__wrap{
+    padding: 2.5rem 2rem 2.2557rem 2.0625rem;
+  }
+
+  .section__wrap .section__card{
+    flex-direction: column;
+    gap: 0;
+  }
+
+  .section__wrap:nth-child(even) .section__card{
+    flex-direction: column;
+    gap: 0;
+  }
+
+  .section__img{
+    padding-top: 1.5rem;
+  }
+  
+  .section__frame,
+  .section__img{
+    width: 100%;
+    height: 100%;
+  }
+  
+
+  .footer__wrap{
+    padding: 2rem 2rem 4rem 2rem;
+  }
+
+  .footer__content{
+    position: relative;
+    height: 6rem;
+  }
+
+  .footer__history{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+  }
+
+  .footer__support-link{
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  .footer__sns-link{
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
 }
