--- a/signin.css
+++ b/signin.css
@@ -1,6 +1,3 @@
-* {
-  box-sizing: border-box;
-}
 body {
   background-color: #f0f6ff;
   width: 100%;
@@ -17,7 +14,7 @@ body {
   top: 238px;
   width: 100%;
   max-width: 400px;
-  height: 627px;
+  height: 393px;
   gap: 32px;
   display: flex;
   flex-direction: column;
@@ -49,11 +46,11 @@ body {
 }
 .question {
   display: flex;
-  width: 218px;
+  width: 100%;
   height: 24px;
   flex-direction: row;
   align-items: flex-start;
-  justify-content: center;
+  /* justify-content: center; */
 }
 .question-text {
   font-family: Pretendard;
@@ -87,9 +84,10 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   gap: 16px;
+  width: 100%;
 }
 .input-section {
-  width: 400px;
+  width: 100%;
   height: 89px;
   display: flex;
   flex-direction: column;
@@ -99,7 +97,7 @@ body {
 }
 
 .user-input {
-  width: 400px;
+  width: 100%;
   height: 60px;
   border-radius: 8px;
   border: 1px solid rgba(204, 213, 227, 1);
@@ -121,7 +119,7 @@ button {
   text-align: center;
 
   color: rgba(245, 245, 245, 1);
-  width: 400px;
+  width: 100%;
   height: 53px;
   padding: 16px 20px;
   border: 0px;
@@ -130,7 +128,7 @@ button {
   background: linear-gradient(90.99deg, #6d6afe 0.12%, #6ae3fe 101.84%);
 }
 .social {
-  width: 400px;
+  width: 100%;
   height: 66px;
   padding: 12px 24px;
   border-radius: 8px;
@@ -151,4 +149,16 @@ button {
 .social-link {
   display: flex;
   gap: 10px;
+}
+
+@media (max-width: 767px) {
+  .section {
+    top: 120px;
+    width: 325px;
+  }
+
+  .content {
+    top: 120px;
+    width: 325px;
+  }
 }
