Edit signup.css mobile-version

--- a/signUp.css
+++ b/signUp.css
@@ -45,7 +45,7 @@ body {
 }
 .question {
   display: flex;
-  width: 204px;
+  width: 100%;
   height: 24px;
   gap: 8px;
   font-family: Pretendard;
@@ -79,7 +79,7 @@ body {
   gap: 16px;
 }
 .input-section {
-  width: 400px;
+  width: 100%;
   height: 89px;
   display: flex;
   flex-direction: column;
@@ -88,7 +88,7 @@ body {
   gap: 12px;
 }
 .user-input {
-  width: 400px;
+  width: 100%;
   height: 60px;
   border-radius: 8px;
   border: 1px solid rgba(204, 213, 227, 1);
@@ -110,7 +110,7 @@ button {
   text-align: center;
 
   color: rgba(245, 245, 245, 1);
-  width: 400px;
+  width: 100%;
   height: 53px;
   padding: 16px 20px;
   border: 0px;
@@ -119,7 +119,7 @@ button {
   background: linear-gradient(90.99deg, #6d6afe 0.12%, #6ae3fe 101.84%);
 }
 .social {
-  width: 400px;
+  width: 100%;
   height: 66px;
   padding: 12px 24px;
   border-radius: 8px;
@@ -140,4 +140,16 @@ button {
 .social-link {
   display: flex;
   gap: 10px;
+}
+
+@media (max-width: 767px) {
+  .section {
+    top: 120px;
+    width: 325px;
+  }
+
+  .content {
+    top: 120px;
+    width: 325px;
+  }
 }
